<resources>
    <string name="app_name">LibAcousticSensingLibrary</string>


    <!-- Preferences strings -->
    <string name="pref_mode">Mode</string>
    <string name="pref_server">Server</string>
    <string name="pref_port">Port</string>
    <string name="pref_automatic">Autostart</string>
    <string name="pref_audioSource">AudioSource</string>

    <string name="pref_modeDescription">Mode of operation</string>
    <string name="pref_serverDescription">The IP address of the server. Use the LAN address if possible.</string>
    <string name="pref_portDescription">Port of the server. Please refer to Matlab script for the port.</string>
    <string name="pref_autostartDescription">If checked, the app will re-establish a connection if it is closed.</string>
    <string name="pref_audioSourceDescription">AudioSource controls how the audio can be recorded</string>

    <string name="pref_defaultMode">Remote Mode</string>
    <string name="pref_defaultServer">10.0.0.12</string>
    <string name="pref_defaultPort">50005</string>
    <bool name="pref_defaultAutomatic">false</bool>
    <string name="pref_defaultAudioSource">0</string>

</resources>
